[metadata]
name = nvwec
version = 0.0.3
author = CDLAboi
author_email = chiran.ranathunga@gmail.com
description = NFT wallet connector 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChiranRanathunga/nvwec.git
project_urls =
    Bug Tracker = https://github.com/ChiranRanathunga/nvwec.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
